# tethricor

./: .cursorrules  .gitignore  ARCHITECTURE.md  LICENSE  NOTICE  PRD.md  README.md  SECURITY_RISKS.md  docker-compose.test.yaml
api-spec/: sandbox-execution-contract.yaml
cli/: pyproject.toml
cli/tests/: test_cli.py
cli/tethricor_cli/: __init__.py  __main__.py  cli.py  manifest.py  models.py  profiles.py  schema.py  security.py
cli/tethricor_cli/data/: image-manifest.yaml
cli/tethricor_cli/generators/: __init__.py  _common.py  aks.py  compose.py  k8s.py
cli/tethricor_cli/generators/azure/: __init__.py  aci.py  job.py
docker/: Dockerfile.goose-hardened  Dockerfile.harness-local  Dockerfile.hermes-hardened  Dockerfile.opencode-hardened  Dockerfile.openhands-hardened  Dockerfile.pi-hardened
docs/: FRAMEWORK_GUIDE.md  TESTING.md
docs/agent_context/: DESIGN_NOTES.md  FRAMEWORK_EVOLUTION.md  IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT.md  PROMPTS_LIBRARY.md  SESSION_HANDOFF.md
examples/: harness.feynman.yaml  harness.goose.yaml  harness.hermes.yaml  harness.opencode.yaml  harness.openhands.yaml  harness.pi.yaml
local-dev/: Dockerfile.mock-gateway  Dockerfile.mock-mcp  Dockerfile.mock-sandbox  mock_gateway.py  mock_mcp.py  mock_sandbox.py  test_mock_gateway.py  test_mock_sandbox.py
providers/tethricor-sandbox-e2b/: README.md  pyproject.toml
providers/tethricor-sandbox-e2b/tests/: test_e2b_conformance.py
providers/tethricor-sandbox-e2b/tethricor_sandbox_e2b/: __init__.py  _provider.py  _sdk.py
providers/tethricor-sandbox-microsandbox/: README.md  pyproject.toml
providers/tethricor-sandbox-microsandbox/tests/: test_microsandbox_conformance.py
providers/tethricor-sandbox-microsandbox/tethricor_sandbox_microsandbox/: __init__.py  _provider.py
schemas/: harness-config-schema.json
scripts/: validate_examples.py
shim/: pyproject.toml
shim/tests/: conftest.py  test_conformance.py  test_direct_azure.py  test_discovery.py  test_phase9.py  test_sdk.py  test_shim.py
shim/tethricor/: __init__.py  cli.py  direct_azure.py  discovery.py  harness.py  types.py
shim/tethricor_runtime/: __init__.py  __main__.py  adapters.py  config.py  interfaces.py  model.py  observability.py  orchestrator.py  registry.py  runtime_client.py  testing.py
test-harness/: README.md  harness.yaml
test-harness/sample-repo/: README.md
tests/: test_e2e_security.py
webhook/: Dockerfile  app.py  test_app.py
webhook/deploy/: webhook.yaml
