[project]
name = "tethricor-cli"
version = "0.1.0"
description = "Tethricor developer CLI — generate and validate harness.yaml and deployment artifacts."
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jsonschema>=4.18",
]

[project.scripts]
tethricor = "tethricor_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tethricor_cli", "tethricor_cli.generators"]

[tool.setuptools.package-data]
tethricor_cli = ["data/*.yaml"]
