[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tethricor-sandbox-e2b"
version = "0.1.0"
description = "E2B SandboxProvider plugin for the Tethricor framework (Firecracker microVMs; dev/managed)."
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires-python = ">=3.10"
dependencies = [
    "tethricor>=0.1",
]

[project.optional-dependencies]
# The E2B SDK is only needed for the real backend binding, not for the contract shell.
sdk = ["e2b>=1.0"]

# Discovered by tethricor.discovery at `import tethricor`; adds `e2b` to the registry.
[project.entry-points."tethricor.sandboxes"]
e2b = "tethricor_sandbox_e2b:make_provider"

[tool.setuptools]
packages = ["tethricor_sandbox_e2b"]
